[package]
name = "parroton"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.9", features = ["json", "gzip", "brotli"]}
serde_json = "1.0.133"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
regex = "1.11.1"
har = "0.8.1"
serde_json_path = "0.7.1"
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
aws-sdk-dynamodb = "1.55.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
axum = { version = "0.7.9", features = ["default", "multipart", "form"] }
tower-http = { version = "0.6.2", features = ["full"] }
thiserror = "2.0.8"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
bon = "3.3.2"
